use PBR for installation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,25 @@
+[metadata]
+name = pitted
+author = Ryan S. Brown
+author-email = sb@ryansb.com
+url = http://github.com/ryansb/pitted
+summary = Save the history of your IPython notebooks with git
+description-file = README.md
+license = AGPLv3+
+classifier =
+    Natural Language :: English
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    Framework :: IPython
+    License :: OSI Approved :: GNU Affero General Public License v3
+    Programming Language :: Python :: 2.7
+keywords =
+    ipython
+    git
+    history
+    notebook
+[files]
+packages =
+    pitted
 [wheel]
 universal = 1
