--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = pitted
+name = ipylogue
 author = Ryan S. Brown
 author-email = sb@ryansb.com
-url = http://github.com/ryansb/pitted
+url = http://github.com/ryansb/ipylogue
 summary = Save the history of your IPython notebooks with git
 description-file = README.md
 license = AGPLv3+
@@ -20,6 +20,6 @@ keywords =
     notebook
 [files]
 packages =
-    pitted
+    ipylogue
 [wheel]
 universal = 1
