update setup.cfg, add README symlink

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = ipylogue
 author = Ryan S. Brown
 author-email = sb@ryansb.com
-url = "http://github.com/ryansb/ipylogue"
+home-page = "http://github.com/ryansb/ipylogue"
 summary = Save the history of your IPython notebooks with git
 description-file = README.md
 license = AGPLv3+
